# serializer version: 1
# name: test_entities[media_player.tx_nr7100-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.SOUND_MODE_LIST: 'sound_mode_list'>: list([
        'Stereo',
        'THX',
      ]),
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'TV',
        'FM Radio',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.tx_nr7100',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'TX-NR7100',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TX-NR7100',
    'platform': 'onkyo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 69516>,
    'translation_key': None,
    'unique_id': '0009B0123456_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[media_player.tx_nr7100-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'audio_information': dict({
        'auto_phase_control_phase': 'Normal',
      }),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TX-NR7100',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      'preset': 1,
      <MediaPlayerEntityStateAttribute.SOUND_MODE: 'sound_mode'>: 'DIRECT',
      <MediaPlayerEntityCapabilityAttribute.SOUND_MODE_LIST: 'sound_mode_list'>: list([
        'Stereo',
        'THX',
      ]),
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'FM Radio',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'TV',
        'FM Radio',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 69516>,
      'video_information': dict({
        'input_color_depth': '24bit',
      }),
      'video_out': 'yes,out',
    }),
    'context': <ANY>,
    'entity_id': 'media_player.tx_nr7100',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[media_player.tx_nr7100_zone_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.SOUND_MODE_LIST: 'sound_mode_list'>: list([
        'Stereo',
      ]),
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'TV',
        'FM Radio',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.tx_nr7100_zone_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'TX-NR7100 Zone 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TX-NR7100 Zone 2',
    'platform': 'onkyo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 69516>,
    'translation_key': None,
    'unique_id': '0009B0123456_zone2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[media_player.tx_nr7100_zone_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TX-NR7100 Zone 2',
      <MediaPlayerEntityStateAttribute.SOUND_MODE: 'sound_mode'>: 'Stereo',
      <MediaPlayerEntityCapabilityAttribute.SOUND_MODE_LIST: 'sound_mode_list'>: list([
        'Stereo',
      ]),
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'VIDEO1 ··· VCR/DVR ··· STB/DVR',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'TV',
        'FM Radio',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 69516>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.625,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.tx_nr7100_zone_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[media_player.tx_nr7100_zone_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'TV',
        'FM Radio',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.tx_nr7100_zone_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'TX-NR7100 Zone 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TX-NR7100 Zone 3',
    'platform': 'onkyo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 2944>,
    'translation_key': None,
    'unique_id': '0009B0123456_zone3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[media_player.tx_nr7100_zone_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'TX-NR7100 Zone 3',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'TV',
        'FM Radio',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 2944>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.tx_nr7100_zone_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
